--- a/index.html
+++ b/index.html
@@ -254,6 +254,19 @@
                                 src="channel pics/thumbnail-4.webp" alt="image"></a>
                         <div class="video-time">22:09</div>
                     </div>
+                
+                    <div class="video-info-grid">
+                        <div class="channel-picture">
+                            <img class="profile-picture" src="channel pics/channel-4.jpeg" alt="image">
+                        </div>
+                        <div class="video-info">
+                            <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+                                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                            </a>
+                            <p class="video-author">Veritasium</p>
+                            <p class="video-stats">18M views &#183; 4 months ago</p>
+                        </div>
+                    </div>
         </section>
         </div>
     </main>
